s13/assignment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dog-classifier-service
spec:
  selector:
    app: dog-classifier
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
